[package]
name = "katal_github_client_example_basic_hyper"
edition = "2021"
publish = false

[dependencies]
bytes = "1.10.1"
katal_github_client = { path = "../..", features = ["http", "reqwest"] }
http-body-util = "0.1.3"
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.16", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
tokio = { version = "1.47.1", features = ["full"] }
